Manifest/envoy_gatewayapi/gateway-class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: frienemie-gateway-class

spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
