Manifest/envoy_gatewayapi/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frienemie-route

spec:
  parentRefs:
  - name: frienemie-gateway
    sectionName: frienemie-http
  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc
      port: 80
